# matrix-rust-sdk

./: .deny.toml  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .rustfmt.toml  .travis.yml  .typos.toml  .zizmor.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  Cargo.nix  Cargo.toml  LICENSE  Makefile  README.md  RELEASE-NOTES-0.5.md  RELEASE.md  RELEASING.md  SECURITY.md  UPGRADING-0.5-to-0.6.md  build.gradle  cliff-weekly-report.toml  cliff.toml  codecov.yaml  design.md  flake.nix  gradle.properties  release.toml  room.rs  rustfmt.toml  settings.gradle  tarpaulin.toml  test.db  towncrier.toml
archive/matrix-qrcode/: Cargo.toml  README.md
archive/matrix-qrcode/src/: lib.rs
archive/matrix-sdk-appservice/: Cargo.toml  README.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: crypto_bench.rs  event_cache.rs  linked_chunk.rs  room_bench.rs  room_list.rs  room_list_bench.rs  store_bench.rs  timeline.rs
bindings/matrix-sdk-crypto-ffi/: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
bindings/matrix-sdk-crypto-ffi/src/: backup_recovery_key.rs  dehydrated_devices.rs  device.rs  error.rs  lib.rs  logger.rs  machine.rs  olm.udl  responses.rs  uniffi_api.rs  users.rs  verification.rs
bindings/matrix-sdk-crypto-js/: .gitignore  .prettierrc.js  .yarnrc  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  cliff.toml  package.json  tsconfig.json  unbase64.js
bindings/matrix-sdk-crypto-js/scripts/: build.sh  epilogue.d.ts  epilogue.js  unbase64.js
bindings/matrix-sdk-crypto-js/src/: attachment.rs  backup_recovery_key.rs  device.rs  encryption.rs  events.rs  future.rs  identifiers.rs  identities.rs  js.rs  lib.rs  logger.rs  machine.rs  macros.rs  olm.rs  requests.rs  responses.rs  store.rs  sync_events.rs  tracing.rs  types.rs  verification.rs  vodozemac.rs
bindings/matrix-sdk-crypto-js/tests/: asyncload.test.js  attachment.test.js  backup_recovery_key.test.js  device.test.js  encryption.test.js  events.test.js  helper.js  identifiers.test.js  machine.test.js  requests.test.js  sync_events.test.js  tracing.test.js
bindings/matrix-sdk-crypto-nodejs/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  download-lib.js  package.json  tsconfig.json
bindings/matrix-sdk-crypto-nodejs/src/: attachment.rs  encryption.rs  events.rs  identifiers.rs  lib.rs  machine.rs  olm.rs  requests.rs  responses.rs  sync_events.rs  tracing.rs  types.rs  vodozemac.rs
bindings/matrix-sdk-crypto-nodejs/tests/: attachment.test.js  encryption.test.js  events.test.js  identifiers.test.js  machine.test.js  requests.test.js  responses.test.js  sync_events.test.js
bindings/matrix-sdk-ffi/: CHANGELOG.md  Cargo.toml  DCGKA_FFI.md  README.md  build.rs  uniffi.toml
bindings/matrix-sdk-ffi-macros/: Cargo.toml  README.md
bindings/matrix-sdk-ffi-macros/src/: lib.rs
bindings/matrix-sdk-ffi-web/: Cargo.toml
bindings/matrix-sdk-ffi-web/src/: lib.rs
bindings/matrix-sdk-ffi/changelog.d/: 6161.changed.md  6428.changed.md  (+38 more)
crates/matrix-crypto-ffi/: Cargo.toml  README.md
crates/matrix-qrcode/: Cargo.toml  README.md
crates/matrix-sdk-appservice/: Cargo.toml
crates/matrix-sdk-base/: CHANGELOG.md  Cargo.toml  Changelog.md  README.md  uniffi.toml
crates/matrix-sdk-common/: CHANGELOG.md  Cargo.toml  README.md  build.rs  uniffi.toml
crates/matrix-sdk-contentscanner/: Cargo.toml  uniffi.toml
crates/matrix-sdk-crypto/: CHANGELOG.md  Cargo.toml  README.md  uniffi.toml
crates/matrix-sdk-crypto-ffi/: Cargo.toml  README.md
crates/matrix-sdk-crypto-js/: .gitignore  Cargo.toml  README.md  build.rs
crates/matrix-sdk-crypto-nodejs/: .gitignore  .npmignore  Cargo.toml  README.md  check-exists.js  download-lib.js  index.js  package-lock.json  package.json  prepare-release.sh  test.js  tsconfig.json
matrix_qrcode/: Cargo.toml  README.md
matrix_qrcode/src/: error.rs  lib.rs  types.rs  utils.rs
matrix_sdk/: Cargo.toml  README.md  async_client_tests.rs
matrix_sdk/examples/: autojoin.rs  command_bot.rs  cross_signing_bootstrap.rs  emoji_verification.rs  get_profiles.rs  image_bot.rs  login.rs
matrix_sdk/src/: async_client.rs  base_client.rs  client.rs  device.rs  error.rs  event_handler.rs  http_client.rs  http_send.rs  lib.rs  request_builder.rs  room_member.rs  sas.rs  session.rs  test_builder.rs  verification_request.rs
matrix_sdk/tests/: async_client_tests.rs
matrix_sdk_appservice/: Cargo.toml
matrix_sdk_appservice/examples/: actix_autojoin.rs  appservice_autojoin.rs  autojoin.rs
matrix_sdk_appservice/src/: actix.rs  error.rs  lib.rs  warp.rs
matrix_sdk_appservice/tests/: actix.rs  registration.yaml  tests.rs
matrix_sdk_base/: Cargo.toml  README.md
matrix_sdk_base/.cargo/: config
matrix_sdk_base/examples/: state_inspector.rs  state_store.rs
matrix_sdk_base/src/: base_client.rs  client.rs  error.rs  lib.rs  media.rs  responses.rs  session.rs  store.rs  test_builder.rs
matrix_sdk_common/: Cargo.toml  README.md
matrix_sdk_common/src/: deserialized_responses.rs  executor.rs  lib.rs  locks.rs
matrix_sdk_common_macros/: Cargo.toml
matrix_sdk_common_macros/src/: lib.rs
matrix_sdk_crypto/: Cargo.toml  README.md
matrix_sdk_crypto/benches/: README.md  crypto_bench.rs  keys_claim.json  keys_query.json  keys_query_2000_members.json  perf.rs
matrix_sdk_crypto/src/: attachments.rs  device.rs  error.rs  group_manager.rs  key_export.rs  key_request.rs  lib.rs  machine.rs  memory_stores.rs  olm.rs  requests.rs  session_manager.rs  user_identity.rs
matrix_sdk_test/: Cargo.toml  README.md
matrix_sdk_test/src/: appservice.rs  lib.rs
matrix_sdk_test/test_data/: delete_devices.json  get_profile_response.json  joined_members_response.json  keys_claim.json  leave_event_sync.json  login_info.json  login_invalid_format.json  login_response.json  login_response_error.json  room_id.json  sync.json
matrix_sdk_types/: Cargo.toml
matrix_sdk_types/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: ci.rs  config_supplier.rs  fixup.rs  kotlin.rs  main.rs  release.rs  swift.rs  workspace.rs
(+2224 files in other folders)
