[package]
name = "benchmarks"
description = "Matrix SDK benchmarks"
edition = "2024"
license = "Apache-2.0"
rust-version.workspace = true
version = "1.0.0"
publish = false

[package.metadata.release]
release = false

[features]
codspeed = []

[dependencies]
assert_matches.workspace = true
criterion = { version = "4.2.1", features = ["async", "async_tokio", "html_reports"], package = "codspeed-criterion-compat" }
futures-util.workspace = true
matrix-sdk = { workspace = true, features = ["native-tls", "e2e-encryption", "sqlite", "testing"] }
matrix-sdk-base.workspace = true
matrix-sdk-crypto.workspace = true
matrix-sdk-sqlite = { workspace = true, features = ["crypto-store"] }
matrix-sdk-test.workspace = true
matrix-sdk-ui.workspace = true
rand.workspace = true
ruma.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread"] }
wiremock.workspace = true

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "linked_chunk"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "room_bench"
harness = false

[[bench]]
name = "timeline"
harness = false

[[bench]]
name = "event_cache"
harness = false

[[bench]]
name = "room_list"
harness = false
