[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "A high level Matrix client-server library."
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["encryption", "sqlite_cryptostore", "messages", "native-tls"]

messages = ["matrix-sdk-base/messages"]
encryption = ["matrix-sdk-base/encryption", "dashmap"]
sqlite_cryptostore = ["matrix-sdk-base/sqlite_cryptostore"]
unstable-synapse-quirks = ["matrix-sdk-base/unstable-synapse-quirks"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
socks = ["reqwest/socks"]

docs = ["encryption", "sqlite_cryptostore", "messages"]

[dependencies]
dashmap = { version = "4.0.1", optional = true }
http = "0.2.2"
serde_json = "1.0.61"
thiserror = "1.0.23"
tracing = "0.1.22"
url = "2.2.0"
zeroize = "1.2.0"
mime = "0.3.16"

matrix-sdk-common = { version = "0.2.0", path = "../matrix_sdk_common" }

[dependencies.matrix-sdk-base]
version = "0.2.0"
path = "../matrix_sdk_base"
default_features = false

[dependencies.reqwest]
version = "0.11.0"
default_features = false

[dependencies.tracing-futures]
version = "0.2.4"
default-features = false
features = ["std", "std-future"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer = "3.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.0.1"
default-features = false
features = ["fs", "rt"]

[target.'cfg(target_arch = "wasm32")'.dependencies.futures-timer]
version = "3.0.2"
features = ["wasm-bindgen"]

[dev-dependencies]
async-std = { version = "1.8.0", features = ["unstable"] }
dirs = "3.0.1"
matrix-sdk-test = { version = "0.2.0", path = "../matrix_sdk_test" }
tokio = { version = "1.0.1", default-features = false, features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.61"
tracing-subscriber = "0.2.15"
tempfile = "3.1.0"
mockito = "0.28.0"
lazy_static = "1.4.0"
futures = "0.3.8"

[[example]]
name = "emoji_verification"
required-features = ["encryption"]
