[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "A high level Matrix client-server library."
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["encryption", "sled_cryptostore", "sled_state_store", "native-tls"]

encryption = ["matrix-sdk-base/encryption"]
sled_state_store = ["matrix-sdk-base/sled_state_store"]
sled_cryptostore = ["matrix-sdk-base/sled_cryptostore"]
markdown = ["matrix-sdk-base/markdown"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
socks = ["reqwest/socks"]
sso_login = ["warp", "rand", "tokio-stream"]

docs = ["encryption", "sled_cryptostore", "sled_state_store", "sso_login"]

[dependencies]
dashmap = "4.0.2"
futures = "0.3.12"
http = "0.2.3"
serde_json = "1.0.61"
thiserror = "1.0.23"
tracing = "0.1.22"
url = "2.2.0"
zeroize = "1.2.0"
mime = "0.3.16"
rand = { version = "0.8.2", optional = true }
bytes = "1.0.1"

matrix-sdk-common = { version = "0.2.0", path = "../matrix_sdk_common" }

[dependencies.matrix-sdk-base]
version = "0.2.0"
path = "../matrix_sdk_base"
default_features = false

[dependencies.reqwest]
version = "0.11.0"
default_features = false

[dependencies.tokio-stream]
version = "0.1.4"
features = ["net"]
optional = true

[dependencies.warp]
version = "0.3.0"
default-features = false
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.backoff]
version = "0.3.0"
features = ["tokio"]

[dependencies.tracing-futures]
version = "0.2.4"
default-features = false
features = ["std", "std-future"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer = "3.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.1.0"
default-features = false
features = ["fs", "rt"]

[target.'cfg(target_arch = "wasm32")'.dependencies.futures-timer]
version = "3.0.2"
features = ["wasm-bindgen"]

[dev-dependencies]
dirs = "3.0.1"
matrix-sdk-test = { version = "0.2.0", path = "../matrix_sdk_test" }
tokio = { version = "1.1.0", default-features = false, features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.61"
tracing-subscriber = "0.2.15"
tempfile = "3.2.0"
mockito = "0.29.0"
lazy_static = "1.4.0"

[[example]]
name = "emoji_verification"
required-features = ["encryption"]
